testsuite/tests/v1/patterns/complex/non_iterable_selector/test.out
Error: Missing required trait
   ╭─[ <working-dir>/script.lkql:3:27 ]
   │
 3 │ print(root is FooNode(any local_children is FooNode))
   │                           ───────┬──────  
   │                                  ╰──────── Trait "Iterable" is required, the type "Int" isn't implementing it
───╯
